; ModuleID = '/home/carl/AnghaBench/qmk_firmware/layouts/community/ortho_4x12/symbolic/extr_keymap.c_RaisePressed.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/layouts/community/ortho_4x12/symbolic/extr_keymap.c_RaisePressed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_RAISE = common dso_local global i32 0, align 4
@_LOWER = common dso_local global i32 0, align 4
@_NEUTRAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RaisePressed(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %15

8:                                                ; preds = %2
  %9 = load i32, i32* @_RAISE, align 4
  %10 = call i32 @layer_on(i32 %9)
  %11 = load i32, i32* @_LOWER, align 4
  %12 = load i32, i32* @_RAISE, align 4
  %13 = load i32, i32* @_NEUTRAL, align 4
  %14 = call i32 @update_tri_layer(i32 %11, i32 %12, i32 %13)
  br label %15

15:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @layer_on(i32) #1

declare dso_local i32 @update_tri_layer(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
